--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.0.0",
+    "axios": "^1.3.1",
     "classnames": "2.3.1",
+    "formik": "^2.2.9",
     "next": "^12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
     "swr": "1.2.0",
-    "tailwindcss": "3.0.18"
+    "tailwindcss": "3.0.18",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
