--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "axios": "^1.3.1",
     "classnames": "2.3.1",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "next": "^12.2.5",
     "react": "17.0.2",
