--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "2.3.1",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "netlify-cli": "^12.10.0",
     "next": "^12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
