--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
+    "cypress": "^12.5.1",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
