--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=saas-starter"
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=saas-starter",
+    "test:e2e": "playright test"
   },
   "dependencies": {
     "@stripe/stripe-js": "1.22.0",
@@ -29,11 +30,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@playwright/test": "^1.30.0",
     "@types/classnames": "2.3.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
-    "cypress": "^12.5.1",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
