--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-images-uploading": "^3.1.7",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
     "swr": "1.2.0",
