--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "axios": "^1.3.1",
     "classnames": "2.3.1",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "netlify-cli": "^12.10.0",
