--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "netlify-cli": "^12.10.0",
     "next": "^12.2.5",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17.0.2",
     "react-images-uploading": "^3.1.7",
     "react-merge-refs": "1.1.0",
