--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.0.0",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "axios": "^1.3.1",
     "classnames": "2.3.1",
     "cookies-next": "^2.1.1",
