--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.0.0",
     "@types/react-beautiful-dnd": "^13.1.3",
+    "@types/react-edit-text": "^5.0.1",
     "axios": "^1.3.1",
     "classnames": "2.3.1",
     "cookies-next": "^2.1.1",
@@ -26,6 +27,7 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17.0.2",
+    "react-edit-text": "^5.0.2",
     "react-images-uploading": "^3.1.7",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
