--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
     "@stripe/stripe-js": "1.22.0",
     "@supabase/auth-helpers-nextjs": "^0.4.1",
     "@supabase/auth-helpers-react": "^0.3.0",
