--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.0.0",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-edit-text": "^5.0.1",
+    "array-move": "^4.0.0",
     "axios": "^1.3.1",
     "classnames": "2.3.1",
     "cookies-next": "^2.1.1",
@@ -32,6 +33,7 @@
     "react-edit-text": "^5.0.2",
     "react-images-uploading": "^3.1.7",
     "react-merge-refs": "1.1.0",
+    "react-sortable-hoc": "^2.0.0",
     "stripe": "8.201.0",
     "swr": "1.2.0",
     "tailwindcss": "3.0.18",
